Base layout and style
Base layout and Styling complete.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
 
+  <div class="container">
     <h1 class="main-header">AWESOME STARTUP EMPLOYEE DIRECTORY</h1>
     
       <div id="usersList"></div>
-  
+  </div>
   <script src="js/app.js"></script>
 </body>
 </html>
