--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     
       <div id="usersList"></div>
   </div>
+
+  <!-- Modal Box -->
+<div id="myModal" class="modal">
+
+    <div class="modal-content">
+      <span class="close">&times;</span>
+    
+    </div>
+  
+  </div>
+  <!-- End Modal -->
   <script src="js/app.js"></script>
 </body>
 </html>
