--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Playfair+Display" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,Playfair+Display" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -20,7 +20,6 @@
 <div id="myModal" class="modal">
 
     <div class="modal-content">
-      <span class="close">&times;</span>
     
     </div>
   
